--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "tutorial-bot",
+  "name": "infobot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Zendovo",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.3.2"
+    "discord.js": "^11.4.2"
   }
 }
